--- a/src/views/includes/pages/_services.pug
+++ b/src/views/includes/pages/_services.pug
@@ -1,9 +1,11 @@
 //- includes/pages/_services.pug
+include ../../mixins/_pictures
+
 section.services#services-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        .picture-wrapper.shadow-lg
+        +servicesPicture("holder", "Web Design")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Design
         p.mb-0.
@@ -15,7 +17,7 @@ section.services#services-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        .picture-wrapper.shadow-lg
+        +servicesPicture("holder", "Web Development")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Development
         p.mb-0.
@@ -27,7 +29,7 @@ section.services#services-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        .picture-wrapper.shadow-lg
+        +servicesPicture("holder", "Mobile Apps")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Mobile Apps
         p.mb-0.
@@ -39,7 +41,7 @@ section.services#services-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        .picture-wrapper.shadow-lg
+        +servicesPicture("holder", "Web Applications")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Web Applications
         p.mb-0.
@@ -51,7 +53,7 @@ section.services#services-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        .picture-wrapper.shadow-lg
+        +servicesPicture("holder", "Smart Solutions")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Smart Solutions
         p.mb-0.
