--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -1,8 +1,11 @@
 //- includes/forms/_newsletter.pug
 section.newsletter.text-center#newsletter
   h2.mb-4 Check our newsletter
-  form.form-inline#news-form(action="#!" netlify)
+  form.form-inline#news-form(name="news-form" method="POST" action="#!" netlify)
     .input-group
-      input.form-control#newsemail(type="email" name="newsemail" placeholder="your@email.here" aria-label="your@email.here")
+      input.form-control#newsemail(
+        type="email" name="newsemail" placeholder="your@email.here"
+        pattern="^([a-z0-9_\.\-]+)@([a-z0-9\.\-]+){2,255}\.([a-z]+){2,10}$" title="Please enter a valid email"
+        aria-label="your@email.here" required)
       .input-group-append
         button.btn.btn-orange(type="submit") Submit
