--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -1,8 +1,9 @@
 //- includes/forms/_newsletter.pug
 section.newsletter.text-center#newsletter
   h2.mb-4 Check our newsletter
-  form.form-inline#news-form(name="news-form" method="POST" action="#!" netlify)
+  form.form-inline#news-form(name="news-form" method="POST" netlify-honeypot="bot-field" action="#!" netlify)
     .input-group
+      input.form-control.d-none#bot-field(type="text" name="bot-field" autocomplete="off")
       input.form-control#newsemail(
         type="email" name="newsemail" placeholder="your@email.here"
         pattern="^([a-z0-9_\.\-]+)@([a-z0-9\.\-]+){2,255}\.([a-z]+){2,10}$" title="Please enter a valid email"
