--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -16,7 +16,7 @@
         .note
         .load
 
-        form.form-horizontal#modal-get-quote(name="modal-get-quote" method="POST" netlify-honeypot="bot-field" action="#!" netlify)
+        form.form-horizontal#modal-get-quote(name="modal-get-quote" method="POST" netlify-honeypot="bot-field" netlify)
           //- Spam Trap
           //- .form-group.d-none
           //-   .input
