--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -12,7 +12,7 @@ section.contact-form.text-center#scontact-form
         .note
         .load
 
-        form.p-4.bg-gradient-dark.shadow-lg#contact-form(name="contact-form" method="POST" netlify-honeypot="bot-field" action="#!" netlify)
+        form.p-4.bg-gradient-dark.shadow-lg#contact-form(name="contact-form" method="POST" netlify-honeypot="bot-field" netlify)
           //- Spam Trap
           //- .form-group.d-none
           //-   .input
