--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -42,7 +42,7 @@
               label(for="modalemail") Email #[span.required *]
               input.form-control#modalemail(
                 type="email" name="modalemail" maxlength="100" placeholder="Your email"
-                pattern="^([a-z0-9_\.\-]+)@([a-z0-9\.\-]+){2,255}\.([a-z]+){2,10}$" title="Please enter a valid email"
+                pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\\.([a-z]+){2,10}$" title="Please enter a valid email"
                 aria-label="Your email" required)
 
           .form-group
@@ -50,7 +50,7 @@
               label(for="modalphone") Phone #[span.required *]
               input.form-control#modalphone(
                 type="tel" name="modalphone" maxlength="20" placeholder="Your phone"
-                pattern="^(\+|0{2})?(\d{0,2}\s?)(\d{3}\s?)(\d{3}\s?)(\d{3})$" title="0000 000 000 or +40 000 000 000."
+                pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$" title="0000 000 000 or +40 000 000 000."
                 aria-label="Your phone" required)
 
           .form-group
