refactor(forms): add `enctype` attribute

--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -16,12 +16,11 @@
         .note
         .load
 
-        form.form-horizontal#modal-get-quote(name="modal-get-quote" method="POST" netlify-honeypot="bot-field" netlify)
-          //- Spam Trap
-          //- .form-group.d-none
-          //-   .input
-          //-     label(for="foo") Leave this field blank
-          //-     input.form-control#foo(type="text" name="foo" autocomplete="off")
+        form.form-horizontal#modal-get-quote(
+          name="modal-get-quote" method="POST" netlify-honeypot="bot-field"
+          enctype="application/x-www-form-urlencoded" netlify)
+
+          input(type="hidden" name="form-name" value="modal-get-quote")
 
           //- HONEYPOT FIELD
           .form-group.d-none
@@ -68,19 +67,7 @@
                 name="modalmessage" rows="6" maxlength="600" placeholder="Your message" title="Maximum 600 characters."
                 aria-label="Your message" required)
 
-          //- Avoid spybots
-          //- .form-group
-          //-   .input
-          //-     label(for="answer") 5-2+1 #[span.required *]
-          //-     input.form-control#answer(
-          //-       type="text" name="answer" maxlength="1" placeholder="Correct answer?"
-          //-       pattern="4" title="Correct answer?" aria-label="Correct answer?" required)
-
-          //- For php script
-          //- input(type="hidden" name="submitted" value="true")
-
       .modal-footer
         .w-100.text-center
           button.btn.btn-info#submit(type="submit") Send
           button.btn.btn-outline-danger#reset(type="reset") Cancel
-          //- button.btn.btn-default(type="button" data-dismiss="modal") Close
