refactor(forms): add action attribute

--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -17,7 +17,7 @@
         .load
 
         form.form-horizontal#modal-get-quote(
-          name="modal-get-quote" method="POST" netlify-honeypot="bot-field" netlify)
+          name="modal-get-quote" method="POST" action="/thank-you.html" netlify-honeypot="bot-field" netlify)
 
           //- HONEYPOT FIELD
           .form-group.d-none
