--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -13,7 +13,7 @@ section.contact-form-section.text-center#contact-form-section
         .load
 
         form.p-4.bg-gradient-dark.shadow-lg#contact-form(
-          name="contact-form" method="POST" netlify-honeypot="bot-field" netlify)
+          name="contact-form" method="POST" action="/thank-you.html" netlify-honeypot="bot-field" netlify)
 
           //- HONEYPOT FIELD
           .form-group.d-none
