--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -2,6 +2,7 @@
 // Contact
 // -----------------------------------------------------------------------------
 
-.contact-form {
-  background-color: $grey-700;
+.contact,
+.marks {
+  background-color: $grey-900;
 }
