--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -1,6 +1,6 @@
 //- includes/forms/_contact-form.pug
 //- Contact form
-section.contact-form-section.text-center#contact-form-section
+section.contact.text-center#contact
   .container
     .row
       .col-12
@@ -12,8 +12,8 @@ section.contact-form-section.text-center#contact-form-section
         .note
         .load
 
-        form.p-4.bg-gradient-dark.shadow-lg#contact-form(
-          name="contact-form" method="POST" action="/thank-you.html" netlify-honeypot="bot-field" netlify)
+        form.p-4.needs-validation.shadow-lg#contact-form(
+          name="contact-form" method="POST" action="/thanks/contact.html" netlify-honeypot="bot-field" netlify novalidate)
 
           //- HONEYPOT FIELD
           .form-group.d-none
@@ -23,43 +23,53 @@ section.contact-form-section.text-center#contact-form-section
 
           .form-group
             .input
-              label(for="name") Name #[span.required *]
               input.form-control#name(
                 type="text" name="name" maxlength="50" placeholder="Your name"
-                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$" title="Please enter a valid name."
-                aria-label="Your name" required)
+                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$"
+                title="Please enter a valid name." aria-label="Your name" required)
+              label(for="name") Name #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid name.
 
           .form-group
             .input
-              label(for="email") Email #[span.required *]
               input.form-control#email(
                 type="email" name="email" maxlength="100" placeholder="Your email"
-                pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$" title="Please enter a valid email"
-                aria-label="Your email" required)
+                pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$"
+                title="Please enter a valid email" aria-label="Your email" required)
+              label(for="email") Email #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid email.
 
           .form-group
             .input
-              label(for="phone") Phone #[span.required *]
               input.form-control#phone(
                 type="tel" name="phone" maxlength="20" placeholder="Your phone"
-                pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$" title="0000 000 000 or +40 000 000 000."
-                aria-label="Your phone" required)
+                pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$"
+                title="0000 000 000 or +40 000 000 000." aria-label="Your phone" required)
+              label(for="phone") Phone #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid phone.
 
           .form-group
             .input
-              label(for="subject") Subject #[span.required *]
               input.form-control#subject(
                 type="text" name="subject" maxlength="100" placeholder="Your subject"
-                pattern=".{1,100}" title="Maximum 100 characters."
-                aria-label="Your subject" required)
+                pattern=".{1,100}"
+                title="Maximum 100 characters." aria-label="Your subject" required)
+              label(for="subject") Subject #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid subject.
 
           .form-group
             .input
-              label(for="message") Message #[span.required *]
               textarea.form-control#message(
-                name="message" rows="6" maxlength="600" placeholder="Your message" title="Maximum 600 characters."
-                aria-label="Your message" required)
+                name="message" rows="6" maxlength="600" placeholder="Your message"
+                title="Maximum 600 characters." aria-label="Your message" required)
+              label(for="message") Message #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid message.
 
-          .mt-5
-            button.btn.btn-info(type="submit") Send
+          .mt-4.text-center
+            button.btn.btn-info(type="submit") Submit
             button.btn.btn-outline-light(type="reset") Cancel
