--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -16,8 +16,8 @@
         .note
         .load
 
-        form.form-horizontal#modal-get-quote(
-          name="modal-get-quote" method="POST" action="/thank-you.html" netlify-honeypot="bot-field" netlify)
+        form.needs-validation#modal-get-quote(
+          name="modal-get-quote" method="POST" action="/thanks/modal.html" netlify-honeypot="bot-field" netlify novalidate)
 
           //- HONEYPOT FIELD
           .form-group.d-none
@@ -27,45 +27,55 @@
 
           .form-group
             .input
-              label(for="name") Name #[span.required *]
               input.form-control#name(
                 type="text" name="name" maxlength="50" placeholder="Your name"
-                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$" title="Please enter a valid name."
-                aria-label="Your name" required)
+                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$"
+                title="Please enter a valid name." aria-label="Your name" required)
+              label(for="name") Name #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid name.
 
           .form-group
             .input
-              label(for="email") Email #[span.required *]
               input.form-control#email(
                 type="email" name="email" maxlength="100" placeholder="Your email"
-                pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\\.([a-z]+){2,10}$" title="Please enter a valid email"
-                aria-label="Your email" required)
+                pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\\.([a-z]+){2,10}$"
+                title="Please enter a valid email" aria-label="Your email" required)
+              label(for="email") Email #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid email.
 
           .form-group
             .input
-              label(for="phone") Phone #[span.required *]
               input.form-control#phone(
                 type="tel" name="phone" maxlength="20" placeholder="Your phone"
-                pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$" title="0000 000 000 or +40 000 000 000."
-                aria-label="Your phone" required)
+                pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$"
+                title="0000 000 000 or +40 000 000 000." aria-label="Your phone" required)
+              label(for="phone") Phone #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid phone.
 
           .form-group
             .input
-              label(for="subject") Subject #[span.required *]
               input.form-control#subject(
                 type="text" name="subject" maxlength="100" placeholder="Your subject"
-                pattern=".{1,100}" title="Maximum 100 characters."
-                aria-label="Your subject" required)
+                pattern=".{1,100}"
+                title="Maximum 100 characters." aria-label="Your subject" required)
+              label(for="subject") Subject #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid subject.
 
           .form-group
             .input
-              label(for="message") Message #[span.required *]
               textarea.form-control#message(
-                name="message" rows="6" maxlength="600" placeholder="Your message" title="Maximum 600 characters."
-                aria-label="Your message" required)
+                name="message" rows="6" maxlength="600" placeholder="Your message"
+                title="Maximum 600 characters." aria-label="Your message" required)
+              label(for="message") Message #[span.required *]
+              .valid-feedback Looks good!
+              .invalid-feedback Please enter a valid message.
 
           .mt-4.text-center
-            button.btn.btn-info(type="submit") Send
-            button.btn.btn-outline-danger(type="reset") Cancel
+            button.btn.btn-info(type="submit") Submit
+            button.btn.btn-outline-dark(type="reset") Cancel
 
       .modal-footer
