--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -3,5 +3,5 @@
 // -----------------------------------------------------------------------------
 
 .newsletter {
-  background-color: darken($grey-900, 1%);
+  background-color: $gray-900;
 }
