--- a/src/scss/components/_tech.scss
+++ b/src/scss/components/_tech.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .technologies {
-  background-color: $grey-100;
+  background-color: $gray-200;
 
   h2 {
     color: #777;
