--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -3,5 +3,5 @@
 // -----------------------------------------------------------------------------
 
 .testimonials {
-  background-color: $grey-800;
+  background-color: $gray-800;
 }
