--- a/src/scss/pages/_info.scss
+++ b/src/scss/pages/_info.scss
@@ -3,7 +3,7 @@
 // =============================================================================
 
 .info {
-  background-color: $grey-900;
+  background-color: $gray-800;
 
   .info-picture {
     transition: filter .5s ease-in-out;
