--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -3,7 +3,7 @@
 // =============================================================================
 
 .portfolio {
-  background-color: $grey-900;
+  background-color: $gray-800;
 
   .portfolio-picture {
     transition: filter .5s ease-in-out;
