--- a/src/scss/pages/_services.scss
+++ b/src/scss/pages/_services.scss
@@ -3,7 +3,7 @@
 // =============================================================================
 
 .services {
-  background-color: $grey-900;
+  background-color: $gray-800;
 
   .services-picture {
     transition: filter .5s ease-in-out;
