--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -5,9 +5,9 @@
 form {
   padding: 0;
   margin: 0;
+  background-color: $gray-900;
   font-family: Roboto, Arial, sans-serif;
   font-size: 1rem;
-  line-height: 1;
   font-weight: 400;
 }
 
