fix(build): update inline source

--- a/src/views/layout/_thanks.pug
+++ b/src/views/layout/_thanks.pug
@@ -18,7 +18,7 @@ html(lang="en")
       link(
         href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,latin-ext" rel="stylesheet")
       if entry.inline
-        link#inline-style(href="../css/thanks.min.css" inline)
+        link#inline-style(href="css/thanks.min.css" inline)
       else
         link#main-style(rel="stylesheet" href="../css/thanks.css" media="screen")
 
