--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -16,7 +16,7 @@
         .note
         .load
 
-        form.needs-validation#modal-get-quote(
+        form.needs-validation.bg-light#modal-get-quote(
           name="modal-get-quote" method="POST" action="/thanks/modal.html" netlify-honeypot="bot-field" netlify novalidate)
 
           //- HONEYPOT FIELD
@@ -73,6 +73,13 @@
               label(for="message") Message #[span.required *]
               .valid-feedback Looks good!
               .invalid-feedback Please enter a valid message.
+
+          .form-group
+            .form-check
+              input.form-check-input#terms-check(type="checkbox" value="" required)
+              label.form-check-label(for="terms-check") Agree to terms and conditions
+              .valid-feedback Looks good!
+              .invalid-feedback You must agree before submitting.
 
           .mt-4.text-center
             button.btn.btn-info(type="submit") Submit
