style(forms): update `.needs-validation` order

--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -12,7 +12,7 @@ section.contact.text-center#contact
         .note
         .load
 
-        form.p-4.needs-validation.shadow-lg#contact-form(
+        form.needs-validation.p-4.shadow-lg#contact-form(
           name="contact-form" method="POST" action="/thanks/contact.html" netlify-honeypot="bot-field" netlify novalidate)
 
           //- HONEYPOT FIELD
