--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -5,7 +5,7 @@ section.newsletter.text-center#newsletter
   .container
     .row
       .col.col-md-8.offset-md-2
-        form.p-4.needs-validation.shadow-lg#news-form(
+        form.needs-validation.p-4.shadow-lg#news-form(
           name="news-form" method="POST" action="/thanks/news.html" netlify-honeypot="bot-field" netlify novalidate)
 
           //- HONEYPOT FIELD
