--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -8,9 +8,8 @@ section.contact.text-center#contact
 
     .row.no-gutters
       .col.col-md-8.offset-md-2
-        //- the form result (success or error) will be rendered inside `.note`
-        .note
-        .load
+        //- the form result (success or error) will be rendered inside `.form-response`
+        .form-response.alert.shadow-lg.d-none
 
         form.needs-validation.p-4.shadow-lg#contact-form(
           name="contact-form" method="POST" action="/thanks/contact.html" netlify-honeypot="bot-field" netlify novalidate)
