--- a/src/views/modules/header/_header-contact.pug
+++ b/src/views/modules/header/_header-contact.pug
@@ -1,8 +1,9 @@
 //- modules/header/_header-contact.pug
-include ../../mixins/_top-picture
+include ../../mixins/_pictures
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("contact", "Contact")
+    +banner("contact", "Contact")
     .mastehead-overlay
-      h1.display-1 Contact
+      h1.mb-0 Contact Us
+      h6.mb-0 Dream Big. Think Different. Do Better
