--- a/src/views/modules/header/_header-info.pug
+++ b/src/views/modules/header/_header-info.pug
@@ -1,8 +1,9 @@
 //- modules/header/_header-info.pug
-include ../../mixins/_top-picture
+include ../../mixins/_pictures
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("info", "Info")
+    +banner("info", "Info")
     .mastehead-overlay
-      h1.display-1 Info
+      h1.mb-0 Info for You
+      h6.mb-0 Dream Big. Think Different. Do Better
