--- a/src/views/modules/header/_header-portfolio.pug
+++ b/src/views/modules/header/_header-portfolio.pug
@@ -1,8 +1,9 @@
 //- modules/header/_header-portfolio.pug
-include ../../mixins/_top-picture
+include ../../mixins/_pictures
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("portfolio", "Portfolio")
+    +banner("portfolio", "Portfolio")
     .mastehead-overlay
-      h1.display-1 Portfolio
+      h1.mb-0 Portfolio
+      h6.mb-0 Dream Big. Think Different. Do Better
