--- a/src/views/modules/header/_header-services.pug
+++ b/src/views/modules/header/_header-services.pug
@@ -1,8 +1,9 @@
 //- modules/header/_header-services.pug
-include ../../mixins/_top-picture
+include ../../mixins/_pictures
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("services", "Services")
+    +banner("services", "Services")
     .mastehead-overlay
-      h1.display-1 Services
+      h1.mb-0 Services
+      h6.mb-0 Dream Big. Think Different. Do Better
