--- a/src/views/modules/header/_header.pug
+++ b/src/views/modules/header/_header.pug
@@ -1,8 +1,9 @@
 //- modules/header/_header.pug
-include ../../mixins/_top-picture
+include ../../mixins/_pictures
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("top", "Adorade")
+    +banner("top", "Adorade")
     .mastehead-overlay
-      h1.display-1 Hello World!
+      h1.mb-0 Hello World!
+      h6.mb-0 Dream Big. Think Different. Do Better
