--- a/src/scss/mixins/_picture.scss
+++ b/src/scss/mixins/_picture.scss
@@ -9,7 +9,7 @@
   padding-bottom: percentage(nth($ratio, 2) / nth($ratio, 1));
 }
 
-@mixin top-fluid-aspect($ratio: 1 1, $selector: "> :first-child") {
+@mixin banner($ratio: 1 1, $selector: "> :first-child") {
   $selector: unquote($selector);
 
   // parent
