--- a/src/views/mixins/_pictures.pug
+++ b/src/views/mixins/_pictures.pug
@@ -1,5 +1,19 @@
 //- mixins/_pictures.pug
 
+//- Top Banner
+//------------------------
+//- include ../path/to/mixins/_pictures
+//- Usage: +banner("name", "alt")
+mixin banner(name, alt)
+  picture.masthead-picture
+    source(type="image/webp" data-srcset="images/top/" + name + ".webp" media="(min-width: 576px)")
+    source(type="image/jpeg" data-srcset="images/top/" + name + ".jpg" media="(min-width: 576px)")
+    source(type="image/webp" data-srcset="images/top/" + name + "-min.webp")
+    source(type="image/jpeg" data-srcset="images/top/" + name + "-min.jpg")
+    img.lazy-top.masthead-img(
+      src="images/top/" + name + "-min.jpg" inline
+      data-src="images/top/" + name + "-min.jpg" alt=alt)
+
 //- Services Picture
 //------------------------
 //- include ../path/to/mixins/_pictures
