--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -1,5 +1,5 @@
 //- includes/sections/_cards.pug
-include ../../mixins/_cards-picture
+include ../../mixins/_pictures
 
 section.cards#cards
   .container
