--- a/src/views/includes/sections/_carousel.pug
+++ b/src/views/includes/sections/_carousel.pug
@@ -1,5 +1,5 @@
 //- includes/sections/_carousel.pug
-include ../../mixins/_portfolio
+include ../../mixins/_pictures
 
 section.carousel-portfolio.text-center#carousel-portfolio
   .container
