--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -7,7 +7,7 @@
 
   .carousel-picture {
     // You should use a 16:9 image ratio, such as 1280 x 720 px.
-    @include portfolio-fluid-aspect(16 9, ".carousel-img");
+    @include picture(16 9, ".carousel-img");
   }
 
   .carousel-inner {
