--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -1,5 +1,5 @@
 //- includes/pages/_portfolio.pug
-include ../../mixins/_portfolio
+include ../../mixins/_pictures
 
 section.portfolio#portfolio-1
   .container
