--- a/src/views/modules/footer/_footer-social.pug
+++ b/src/views/modules/footer/_footer-social.pug
@@ -1,8 +1,9 @@
 //- modules/footer/_footer-social.pug
 ul.footer-social-menu#menu-footer-social
-  li.menu-item: a(target="_blank" href="#!" title="Facebook") #[i.fab.fa-facebook-square.fa-fw.fa-2x]
-  li.menu-item: a(target="_blank" href="#!" title="Messenger") #[i.fab.fa-facebook-messenger.fa-fw.fa-2x]
-  li.menu-item: a(target="_blank" href="#!" title="WhatsApp") #[i.fab.fa-github.fa-fw.fa-2x]
-  li.menu-item: a(target="_blank" href="#!" title="Twitter") #[i.fab.fa-twitter.fa-fw.fa-2x]
+  li.menu-item: a(target="_blank" href="https://www.facebook.com/Adorade" title="Facebook") #[i.fab.fa-facebook-square.fa-fw.fa-2x]
+  li.menu-item: a(target="_blank" href="https://m.me/Adorade" title="Messenger") #[i.fab.fa-facebook-messenger.fa-fw.fa-2x]
+  li.menu-item: a(target="_blank" href="https://github.com/adorade" title="GitHub") #[i.fab.fa-github.fa-fw.fa-2x]
+  li.menu-item: a(target="_blank" href="https://twitter.com/adorade" title="Twitter") #[i.fab.fa-twitter.fa-fw.fa-2x]
+  //- li.menu-item: a(target="_blank" href="#!" title="WhatsApp") #[i.fab.fa-whatsapp.fa-fw.fa-2x]
   //- li.menu-item: a(target="_blank" href="#!" title="Instagram") #[i.fab.fa-instagram.fa-fw.fa-2x]
   //- li.menu-item: a(target="_blank" href="#!" title="Pinterest") #[i.fab.fa-pinterest.fa-fw.fa-2x]
