--- a/src/views/modules/footer/_footer-tags.pug
+++ b/src/views/modules/footer/_footer-tags.pug
@@ -1,18 +1,18 @@
 //- modules/footer/_footer-tags.pug
 .container
   .row
-    .col-12
+    .col
       .tags
-        a.button.express(href="#!") Express
-        a.button.node(href="#!") Node.js
-        a.button.git(href="#!") Git
-        a.button.network(href="#!") Network
-        a.button.webpack(href="#!") webpack
-        a.button.react(href="#!") React
-        a.button.vue(href="#!") Vue.js
-        a.button.go(href="#!") Go
-        a.button.js(href="#!") JavaScript
-        a.button.css(href="#!") CSS
-        a.button.babel(href="#!") Babel
-        a.button.services(href="#!") Services
-        a.button.gulp(href="#!") Gulp
+        span.tag.express Express
+        span.tag.node Node.js
+        span.tag.git Git
+        span.tag.serverless Serverless
+        span.tag.html HTML5
+        span.tag.webpack webpack
+        span.tag.react React
+        span.tag.vue Vue.js
+        span.tag.go Go
+        span.tag.js JavaScript
+        span.tag.css CSS
+        span.tag.babel Babel
+        span.tag.gulp Gulp
