--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -8,10 +8,10 @@
 
 .footer-container {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2rem 1.25rem;
+  padding: 3rem 0 2rem;
   @include gradient-radial-circle(rgba($black, .3), rgba($black, .9));
 }
 
@@ -24,18 +24,16 @@
   width: 100%;
 }
 
-.footer-cta {
-  padding: 0;
-}
-
-.footer-news {
-  padding-top: 2rem;
+.footer-cta,
+.footer-tags {
+  margin-bottom: 3rem;
 }
 
 .footer-social {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  margin-bottom: 2rem;
 
   .footer-social-menu {
     display: flex;
@@ -57,12 +55,4 @@
       color: $white;
     }
   }
-}
-
-.footer-tags {
-  margin-bottom: 3rem;
-}
-
-.footer-legal {
-  padding-top: 2rem;
 }
