--- a/src/views/modules/footer/_footer-call-to-action.pug
+++ b/src/views/modules/footer/_footer-call-to-action.pug
@@ -1,11 +1,11 @@
 //- modules/footer/_footer-call-to-action.pug
 .container
   .row
-    .col-lg-8.offset-lg-2
+    .col.col-lg-8.offset-lg-2
       p.lead.mb-5
         | Interested working together? We are here to answer any question you
         | may have about our services. Reach out to us and we'll do our best to
         | find the right solution for you.
       //- Button trigger modal
-      button.btn.btn-orange.btn-lg.mb-5.text-uppercase.shadow-lg(
+      button.btn.btn-orange.btn-lg.text-uppercase.shadow-lg(
         type="button" data-toggle="modal" data-target="#GetQuoteModal") get in touch
